实现job，mq，datasource,tcc,limiter模块

--- a/backend/gob/business/user/pom.xml
+++ b/backend/gob/business/user/pom.xml
@@ -19,6 +19,20 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.haohaoxuexi</groupId>
+            <artifactId>saToken</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.haohaoxuexi</groupId>
+            <artifactId>rpc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+
+
 
 
 
